feat: implement google oauth2 login

--- a/src/main/resources/static/fit-tester.html
+++ b/src/main/resources/static/fit-tester.html
@@ -90,7 +90,7 @@
 <script>
     /** ====== 설정 ====== **/
     const CONFIG = {
-        CLIENT_ID: 'YOUR_GOOGLE_OAUTH_CLIENT_ID.apps.googleusercontent.com', // ← 교체
+        CLIENT_ID: '99925551223-m35r2uvp8aqfebpop1fbtqt26klu717i.apps.googleusercontent.com', // ← 교체
         SCOPES: 'https://www.googleapis.com/auth/fitness.activity.read https://www.googleapis.com/auth/fitness.location.read openid email profile'
     };
 
